# intonation-toy

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  DEV_CONSOLE_VERSION_CONFLICT_ANALYSIS.md  MANUAL_REGRESSION_TESTS.md  README.md  REFACTORING_PLAN.md  TESTING.md  Trunk.toml  architecture.md  audio_data_flow_analysis.md  build.sh  dev.sh  index.html  serve.rb  serve.sh  stateless-analysis.md  stop.sh  story_013_simple_validation.rs  story_013_validation.rs  test_command_execution.rs  test_scale_changes.rs  unused-code-analysis.md
.bmad-core/: core-config.yaml  core-config.yml  install-manifest.yaml  install-manifest.yml
.cursor/: instructions.md
action/: Cargo.toml
build-configs/: dev.toml  development.toml  production.toml  release.toml
dev-console/: Cargo.toml  README.md  build.rs
dev-console/src/: command.rs  command_registry.rs  component.rs  component_debug.rs  console.rs  history.rs  lib.rs  main.rs  output.rs  output_renderer.rs
dev-console/src/console/: README.md  command_registry.rs  component.rs  history.rs  output.rs
docs/: MANUAL_REGRESSION_TESTS.md  PROFILING_SETUP.md  adaptive-ema-smoothing.md  architectural-analysis.md  architecture-proposal.md  architecture.md  audio-pipeline-implementation-plan.md  audioworklet_architecture_analysis.md  audioworklet_manager_global_access_analysis.md  background_shader_architecture.md  background_shader_poc_plan.md  buffer-pool-configuration-guide.md  buffer-pool-ping-pong-examples.md  buffer-pool-troubleshooting.md  coding_guidelines.md  epic-backlog.md  (+35 more)
docs-archived/: 1.1.story.md  2.2.story.md  tech-stack.md  yew-migration-product-plan.md
egui-dev-console/: Cargo.toml
egui-dev-console/src/: command.rs  command_registry.rs  egui_console.rs  history.rs  lib.rs  microphone_button.rs  output.rs
event-dispatcher/: Cargo.toml
event-dispatcher/src/: lib.rs
intonation-toy/: Cargo.toml  app_config.rs  build.rs  config.rs  index.html  lib.rs  music_theory.rs  shared_types.rs  test_just_intonation_debug.rs  theme.rs
intonation-toy/common/: mod.rs  utils.rs
intonation-toy/debug/: debug_data.rs
intonation-toy/debug/debug_panel/: data_types.rs  debug_panel.rs  mod.rs  overlay.rs
intonation-toy/engine/: mod.rs
intonation-toy/engine/audio/: buffer.rs  buffer_analyzer.rs  commands.rs  context.rs  message_protocol.rs  microphone.rs  mod.rs  permission.rs  pitch_analyzer.rs  pitch_detector.rs  root_note_audio_node.rs  signal_generator.rs  stream.rs  test_signal_node.rs  tuning_fork_node.rs  volume_detector.rs  worklet.rs
intonation-toy/engine/platform/: commands.rs  mod.rs
intonation-toy/model/: mod.rs
intonation-toy/platform/: mod.rs  stubs.rs  traits.rs  web_impl.rs
intonation-toy/platform/stubs/: error_display.rs  mod.rs  performance.rs  timer.rs  ui_controller.rs
intonation-toy/platform/web/: error_display.rs  mod.rs  performance.rs  timer.rs  ui_controller.rs  utils.rs
intonation-toy/presentation/: audio_analysis.rs  egui_composite_backend.rs  egui_text_backend.rs  main_scene.rs  mod.rs  renderer.rs  smoothing.rs  startup_scene.rs  tuning_lines.rs  user_pitch_line.rs
intonation-toy/src/: app_config.rs  lib.rs  music_theory.rs  shared_types.rs  theme.rs
intonation-toy/src/common/: error_handling.rs  fps_counter.rs  logging.rs  mod.rs  music_theory.rs  shared_types.rs  theme.rs  utils.rs
intonation-toy/src/debug/: data_types.rs  debug_data.rs  debug_panel.rs  mod.rs
intonation-toy/src/debug/debug_panel/: mod.rs
intonation-toy/src/engine/: mod.rs
intonation-toy/src/engine/audio/: analyser_volume_detector.rs  analysis.rs  analyzer.rs  audio_context.rs  audio_pipeline.rs  audio_pipeline_configs.rs  commands.rs  context.rs  data_types.rs  generator.rs  legacy_media_stream_node.rs  message_protocol.rs  microphone.rs  mod.rs  pipeline.rs  pitch_analyzer.rs  pitch_detector.rs  router.rs  signal_flow.rs  signal_generator.rs  signal_path.rs  test_signal_node.rs  tuning_fork_node.rs  volume_detector.rs  worklet.rs  worklet_manager.rs  worklet_message_handling.rs
intonation-toy/src/engine/audio/context/: audio_context_config.rs  audio_context_manager.rs  audio_context_state.rs  audio_devices.rs  audio_system_context.rs  mod.rs
intonation-toy/src/engine/platform/: commands.rs  mod.rs
intonation-toy/src/model/: mod.rs
intonation-toy/src/presentation/: audio_analysis.rs  egui_text_backend.rs  mod.rs  renderer.rs  tuning_lines.rs  user_pitch_line.rs
intonation-toy/src/web/: error_message_box.rs  first_click_handler.rs  mod.rs  performance.rs  profiling.rs  sidebar_controls.rs  storage.rs  styling.rs  three_d.rs  user_media_permission.rs  utils.rs
intonation-toy/static/: audio-processor.js  index.css  resize-handler.js  style.css
intonation-toy/static/fonts/: README.md
intonation-toy/tests/: audio_worklet_batching.rs  buffer_pool_statistics_integration.rs  integration_tests.rs  platform_tests.rs  separation_of_concerns_integration.rs  worklet_message_handling.rs
intonation-toy/theory/: tuning.rs
intonation-toy/web/: error_message_box.rs  first_click_handler.rs  main_scene_ui.rs  mod.rs  performance.rs  profiling.rs  sidebar_controls.rs  styling.rs  utils.rs
sprite-renderer/: Cargo.toml  README.md
sprite-renderer/docs/: 1.1.story.md  sprite-renderer-prd.md
sprite-renderer/examples/: README.md  basic_rendering.rs  batch_rendering.rs  custom_shaders.rs  hit_testing.rs  task8_camera_test.rs
sprite-renderer/examples/basic_demo/: Cargo.toml  Trunk.toml  build.sh  index.html
sprite-renderer/examples/basic_demo/src/: lib.rs
sprite-renderer/src/: lib.rs
sprite-renderer/src/depth/: layers.rs  mod.rs
sprite-renderer/src/docs/: sprite-renderer-1.1-project-setup.md  sprite-renderer-1.2.texture-support.md  sprite-renderer-proposal.md
sprite-renderer/src/hit_testing/: bounds.rs  mod.rs  spatial_index.rs
sprite-renderer/src/renderer/: batch.rs  context.rs  culling.rs  mod.rs
sprite-renderer/src/shaders/: builtin.rs  mod.rs  solid_color.rs  textured.rs
sprite-renderer/src/sprite/: animation.rs  atlas.rs  mod.rs  sprite.rs
sprite-renderer/src/utils/: color.rs  math.rs  mod.rs
(+577 files in other folders)
