[package]
name = "pitch-toy"
version = "0.1.0"
edition = "2021"
description = "Real-time pitch detection with Rust/WASM and Web Audio API"
repository = "https://github.com/user/pitch-toy"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "Storage",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaTrackSettings",
  "MediaDeviceInfo",
  "MediaDeviceKind",
] }
js-sys = "0.3"
pitch-detection = "0.3"
rustfft = "6.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Development dependencies
console_error_panic_hook = "0.1"

# TODO: We probably want to add WASM testing in future story
# [dev-dependencies]
# wasm-bindgen-test = "0.3"  # For testing WASM compilation and module boundaries

[lib]
crate-type = ["cdylib"]
