[package]
name = "pitch-toy"
version = "0.1.0"
edition = "2021"
description = "Real-time pitch detection with Rust/WASM and Web Audio API"
repository = "https://github.com/user/pitch-toy"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "Storage",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaTrackSettings",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "AudioContext",
  "AudioContextOptions",
  "AudioContextState",
] }
js-sys = "0.3"
pitch-detection = "0.3"
rustfft = "6.0"
three-d = "0.18.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lib]
crate-type = ["cdylib", "rlib"]
