[package]
name = "dev-console"
version = "0.1.0"
edition = "2024"
description = "Development console library for debugging and development tools"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "Storage",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaStreamTrackState",
  "MediaTrackSettings",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "AudioContext",
  "AudioContextOptions",
  "AudioContextState",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "BaseAudioContext",
  "AudioNode",
  "AudioParam",
  "AudioDestinationNode",
  "ScriptProcessorNode",
  "AudioProcessingEvent",
  "AudioBuffer",
] }
js-sys = "0.3"
pitch-detection = "0.3"
rustfft = "6.0"
three-d = "0.18.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lib]
name = "dev_console"
crate-type = ["rlib"] 