[package]
name = "dev-console"
version = "1.0.0"
edition = "2024"
description = "Development console library using egui for debugging and development tools"
license = "MIT"

[dependencies]
three-d = { version = "0.17.1", features = ["egui-gui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web-specific dependencies (conditional)
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "Storage",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaStreamTrackState",
  "MediaTrackSettings",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "AudioContext",
  "AudioContextOptions",
  "AudioContextState",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "BaseAudioContext",
  "AudioNode",
  "AudioParam",
  "AudioDestinationNode",
  "ScriptProcessorNode",
  "AudioProcessingEvent",
  "AudioBuffer",
], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["web"]
web = ["dep:web-sys", "dep:js-sys", "dep:wasm-bindgen"]
test-native = []

[lib]
name = "egui_dev_console"
crate-type = ["rlib"]