[package]
name = "egui-dev-console"
version = "0.1.0"
edition = "2024"
description = "Development console library using egui for debugging and development tools"
license = "MIT"

[dependencies]
three-d = { version = "0.18.2", features = ["egui-gui"] }
dev-console = { path = "../dev-console" }
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "Storage",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaStreamTrackState",
  "MediaTrackSettings",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "AudioContext",
  "AudioContextOptions",
  "AudioContextState",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "BaseAudioContext",
  "AudioNode",
  "AudioParam",
  "AudioDestinationNode",
  "ScriptProcessorNode",
  "AudioProcessingEvent",
  "AudioBuffer",
] }
js-sys = "0.3"
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lib]
name = "egui_dev_console"
crate-type = ["rlib"]