[package]
name = "event-dispatcher"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Generic type-safe event dispatcher for domain-specific event communication"
license = "MIT"
keywords = ["events", "dispatcher", "publish-subscribe", "rust", "wasm"]
categories = ["web-programming", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
# No external dependencies - keep it minimal and reusable

[dev-dependencies]
wasm-bindgen-test = "0.3.50"