[package]
name = "intonation-toy"
version = "0.5.0"
edition = "2024"
description = "Real-time intonation analysis with Rust/WASM and Web Audio API"
repository = "https://github.com/user/intonation-toy"
license = "MIT"

[dependencies]
dev-console = { path = "../dev-console" }
pitch-detection = "0.3"
rustfft = "6.0"
three-d = { version = "0.17.1", features = ["egui-gui"] }
three-d-asset = "0.7"
three-d-text-builder = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web-specific dependencies (conditional)
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "Storage",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaStreamTrackState",
  "MediaTrackSettings",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "AudioContext",
  "AudioContextOptions",
  "AudioContextState",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "BaseAudioContext",
  "AudioNode",
  "AudioParam",
  "AudioDestinationNode",
  "ScriptProcessorNode",
  "AudioProcessingEvent",
  "AudioBuffer",
  "MessageEvent",
  "MessagePort",
  "MediaStreamAudioSourceNode",
  "OscillatorNode",
  "OscillatorType",
  "GainNode",
  "PeriodicWave",
  "ChannelCountMode",
  "ChannelInterpretation",
  "MouseEvent",
  "TouchEvent",
  "Touch",
  "TouchList",
  "DomRect",
  "HtmlSelectElement",
  "HtmlInputElement",
], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-timers = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["web"]
web = ["dep:web-sys", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:console_error_panic_hook", "dep:gloo-timers"]
test-native = []
separation-logging = []

[lib]
name = "intonation_toy"
path = "lib.rs"
crate-type = ["cdylib", "rlib"] 