[package]
name = "basic_demo"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
sprite-renderer = { path = "../../" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "EventTarget",
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"